# wtf

./: .gitignore  README.md  pyproject.toml
src/wtf_cli/: ai.py  config.py  context.py  formatter.py  main.py  parser.py  rules.py  runner.py
tests/: test_ai.py  test_context.py  test_formatter.py  test_parser.py  test_rules.py  test_runner.py
