[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wtf-cli"
version = "0.1.0"
description = "Diagnoses terminal errors using your local code, packages, and environment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YOUR_NAME" },
]
keywords = ["cli", "debugging", "errors", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
wtf = "wtf_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wtf_cli"]

[tool.ruff]
line-length = 100
